log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: shared-log
          emptyDir: {}
      containers:
        - name: log-writer
          image: log-output-writer:2.1
          imagePullPolicy: Never
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
        - name: log-reader
          image: log-output-reader:2.1
          imagePullPolicy: Never
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
              readOnly: true
